--- a/src/app/components/login-sign/login-sign.component.scss
+++ b/src/app/components/login-sign/login-sign.component.scss
@@ -129,6 +129,11 @@ label.highlight {
 	color:$white;
 }
 
+#fecha{
+  font-size: 14px;
+  color:rgba($white,.5);
+}
+
 input, textarea {
   font-size:22px;
   display:block;
