añadir campos al registro y validarlos

--- a/src/app/components/login-sign/login-sign.component.html
+++ b/src/app/components/login-sign/login-sign.component.html
@@ -14,7 +14,7 @@
 
     <div class="tab-content">
       <div id="signup">
-        <form #f = "ngForm" (ngSubmit)="register(registerEmail.value, registerPassword.value, registerNombre.value, registerApellido1.value)"  action="">
+        <form ngNativeValidate #f = "ngForm" (ngSubmit)="register(registerEmail.value, registerPassword.value, registerNombre.value, registerApellido1.value, registerApellido2.value, registerFechaNac.value , registerCP.value, registerPais.value , registerTelefono.value)"  action="">
         <h1>Regístrate</h1>
 
         <div action="/" method="post">
@@ -79,7 +79,6 @@
           </label>
           <input type="text" #registerTelefono required autocomplete="off" />
         </div>
-
           <button class="button button-block" type="submit">Registrarse</button>
 
         </div>
@@ -87,7 +86,7 @@
       </div>
     
       <div id="login">
-        <form #f = "ngForm" (ngSubmit)="loginEmail(userEmail.value, userPassword.value)"  action="">
+        <form ngNativeValidate #f = "ngForm" (ngSubmit)="loginEmail(userEmail.value, userPassword.value)"  action="">
         <h1>Bienvenido de nuevo</h1>
 
         <div>
