--- a/src/app/components/login-sign/login-sign.component.html
+++ b/src/app/components/login-sign/login-sign.component.html
@@ -35,7 +35,7 @@
             </div>
             <div class="field-wrap">
               <label>
-                Apellido 2<span class="req">*</span>
+                Apellido 2
               </label>
               <input type="text" #registerApellido2 required autocomplete="off" />
             </div>
@@ -79,6 +79,13 @@
           </label>
           <input type="text" #registerTelefono required autocomplete="off" />
         </div>
+        <div id="captcha" class="mb-3">
+            <img src="../../../assets/img/captcha.png">
+        </div>
+        <div class="field-wrap">
+            <input type="text" required autocomplete="off" />
+        </div>
+
 
           <button class="button button-block" type="submit">Registrarse</button>
 
