--- a/src/app/components/login-sign/login-sign.component.scss
+++ b/src/app/components/login-sign/login-sign.component.scss
@@ -162,6 +162,12 @@ textarea {
   margin-bottom:40px;
 }
 
+#captcha{
+  display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
 .top-row {
   &:after {
     content: "";
