--- a/src/app/components/login-sign/login-sign.component.html
+++ b/src/app/components/login-sign/login-sign.component.html
@@ -14,7 +14,7 @@
 
     <div class="tab-content">
       <div id="signup">
-        <form ngNativeValidate #f = "ngForm" (ngSubmit)="register(registerEmail.value, registerPassword.value, registerNombre.value, registerApellido1.value, registerApellido2.value, registerFechaNac.value , registerCP.value, registerPais.value , registerTelefono.value)"  action="">
+        <form ngNativeValidate #f = "ngForm" (ngSubmit)="register(registerEmail.value, registerPassword.value, registerNombre.value, registerApellido1.value, registerApellido2.value, registerFechaNac.value , registerCP.value, registerPais.value , registerTelefono.value, registerCaptcha.value)"  action="">
         <h1>Regístrate</h1>
 
         <div action="/" method="post">
@@ -83,7 +83,7 @@
             <img src="../../../assets/img/captcha.png">
         </div>
         <div class="field-wrap">
-            <input type="text" required autocomplete="off" />
+            <input type="text" #registerCaptcha required autocomplete="off" />
         </div>
 
 
