añadir funcionalidad a cookie notificacion

--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -10,7 +10,7 @@
     <div class="col-md-6" >
       <br>
       <h2 class="text-uppercase font-weight-bold">CONTACTO</h2>
-      <form action="">
+      <form action="" ngNativeValidate>
         <div class="row">
           <div class="col-md-6">
             <!-- Formulario de contacto (Si se deja algún campo en blanco salta un aviso para quue se rellene) -->
@@ -55,5 +55,4 @@
   </div>
         
 </div>
-<app-cookies></app-cookies>
 </div>
