formulario administracion usuario

--- a/src/app/components/login-sign/login-sign.component.scss
+++ b/src/app/components/login-sign/login-sign.component.scss
@@ -134,7 +134,7 @@ label.highlight {
   color:rgba($white,.5);
 }
 
-input, textarea {
+input, textarea, select {
   font-size:22px;
   display:block;
   width:100%;
