--- a/src/app/components/cookies/cookies.component.html
+++ b/src/app/components/cookies/cookies.component.html
@@ -1,5 +1,5 @@
 <div class="alert text-center cookiealert" role="alert">
-  Este sitio web utiliza cookies para mejorar su experiencia de uso.
+  Te recomendamos loguearte para aprovechar las funcionalidades de la página.
   <button type="button" class="btn btn-danger btn-sm acceptcookies" aria-label="Close">
       Aceptar
   </button>
