--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="row">
-        <div [ngClass]="{'col-xl-6': !seeMore,'col-xl-12': seeMore, 'col-12': true}">
+        <div>
             <img src="{{imagen}}">
         </div>       
-       <div [ngClass]="{'col-xl-6': !seeMore,'col-xl-12': seeMore, 'col-12': true}">
+       <div>
             <div class="row">
                 <div class="col-md-12 mt-4 ml-2">
                     <!-- Inyeción Título -->
