--- a/src/app/components/firebase/firebase.component.html
+++ b/src/app/components/firebase/firebase.component.html
@@ -1,4 +1,71 @@
-<div class="container mt-5 text-center">
+<div id="header"></div>
+<ul class="nav nav-tabs" id="myTab" role="tablist">
+    <li class="nav-item">
+      <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Nuevo Item</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Modificar Item</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Gestión de usuarios</a>
+    </li>
+  </ul>
+  <div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+        <div class="row justify-content-center mt-1">
+          <form ngNativeValidate class="">
+            <label>Sección: </label><select #newsection class="ml-2">
+              <option value="ninstalaciones">Instalaciones</option>
+              <option value="noticias">Noticias</option>
+              <option value="cursos">Cursos</option>
+            </select> <br>
+            <label class="mt-2">Título: </label><input class="ml-2" type="text" #newtittle required> <br>
+            
+            <label class="mt-2">Descripción:</label><br><textarea rows="4" cols="50" type="text" #newdescription required></textarea> <br>
+            <div class="container-fluid mt-4">
+              <span class="nuestroinput">
+                <label for="nuestroinput"><i class="fas fa-upload"></i><span class="nuestroinput" id="mensaje"> Requiere imagen</span></label><br>     
+              </span>
+              <span class="nuestroinput">
+                <input id="nuestroinput" type="file" (change)="getFile($event)" required><br>
+              </span>
+              <button type="submit" (click)="addItem(newsection.value,newtittle.value,newdescription.value,newsection.value)"  class="btn btn-danger mt-1" false>Crear nuevo</button> 
+            </div>
+          </form>
+        </div>
+    </div>
+    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+        <div class="row justify-content-center">            
+            <form>
+              <label>Sección:</label><select class="ml-2" #section>
+                <option value="recursos">Recursos</option>
+                <option value="ninstalaciones">Instalaciones</option>
+                <option value="noticias">Noticias</option>
+                <option value="cursos">Cursos</option>
+              </select> <br>
+              <label class="mt-2">Título:</label><input class="ml-2" type="text" #tittle  required>
+            </form> 
+          <div>
+            <button class="btn btn-danger mt-2" (click)="getItem(section.value,tittle.value)">Buscar</button>
+          </div>
+        </div>
+          <div class="row">
+            <div class="col-3"></div>
+            <div *ngIf="item" class="col-6 mt-2 card">
+              <app-editable-item [i]=this.item [origen]=section.value></app-editable-item>         
+            </div>
+            <div class="col-3"></div>
+          </div>
+    </div>
+    <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+  </div>
+
+
+
+
+
+<!-- 
+  <div class="container mt-5 text-center">
   <h2>El usuario es admin: {{isAdmin}}</h2>
   <br>
   <div style="display: inline-block">  
@@ -11,7 +78,7 @@
       <div class="row mt-5">
         
         <div class="col-6">
-          <form class="">
+          <form ngNativeValidate class="">
             <label>Sección:</label><br><select #newsection>
               <option value="ninstalaciones">Instalaciones</option>
               <option value="noticias">Noticias</option>
@@ -27,7 +94,7 @@
               <span class="nuestroinput">
                 <input id="nuestroinput" type="file" (change)="getFile($event)" required><br>
               </span>
-              <!-- <button (click)="uploadFile()" >Subir archivo</button> -->
+               <button (click)="uploadFile()" >Subir archivo</button> 
               <button type="submit" (click)="addItem(newsection.value,newtittle.value,newdescription.value,newsection.value)"  class="btn btn-danger mt-1" false>Crear nuevo</button> 
             </div>
           </form>
@@ -42,16 +109,10 @@
                 <option value="cursos">Cursos</option>
               </select> <br>
               <label class="mt-2">Título:</label><br><input type="text" #tittle  required> <br>
-              
             </form>
             <button (click)="getItem(section.value,tittle.value)">Buscar</button>
               <div *ngIf="item" class="col-12 card">
-                <form>
-                  Título: <input type="text" value="{{item.tittle}}" #tittle><br>
-                  Descripcion: <br> <textarea rows="4" cols="50" type="text" #description>{{item.description}}</textarea><br>
-                </form>
-                <button (click)="update(item.id,item.origen,tittle.value,description.value)">Update</button>            
-                <button (click)="delete(item.id,item.origen)">Delete</button>            
+                <app-editable-item [i]=this.item [origen]=section.value></app-editable-item>         
               </div>
           </div>
           </div>
@@ -68,4 +129,4 @@
 </div>
   
   
-  
+   -->
