--- a/src/app/components/editable-item/editable-item.component.html
+++ b/src/app/components/editable-item/editable-item.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="i" >
   <div class="row">
       <div class="col-xl-6 mt-2">
           <img src="{{i.image}}">
