--- a/src/app/components/editable-item/editable-item.component.html
+++ b/src/app/components/editable-item/editable-item.component.html
@@ -1,22 +1,28 @@
-<div class="container" *ngIf="i" >
+<div class="container card" *ngIf="i" >
   <div class="row">
-      <div class="col-xl-6 mt-2">
-          <img src="{{i.image}}">
-      </div>       
-     <div class='col-xl-6'>
-          <div class="row">            
-            <div class="col-md-12 mt-4 ml-2">
-                  <!-- Inyeción Título -->
-                  <h4><input type="text" [(ngModel)]="i.tittle"></h4>
-            </div>
-            <div class="col-md-12 ml-2">
-              <textarea  cols="30" rows="10" [(ngModel)]="i.description"></textarea>
-            </div>          
-          </div>         
+    <div class="col-xl-6 mt-2">
+        <img src="{{i.image}}">
+    </div>       
+    <div class='col-xl-6'>
+        <div class="row">            
+          <div class="col-md-12 mt-4 ml-2">
+                <!-- Inyeción Título -->
+                <h4><input type="text" [(ngModel)]="i.tittle"></h4>
+          </div>
+          <div class="col-md-12 ml-2">
+            <textarea  cols="30" rows="10" [(ngModel)]="i.description"></textarea>
+          </div>          
+        </div>         
+    </div>
+  </div>
+    <div class="row justify-content-center pb-3">
+      <div class="col-2">          
       </div>
-      <div class="row justify-content-center">
+      <div class="col-8">
         <button class="btn btn-danger" (click)="update()">Modificar</button>            
-        <button class="btn btn-danger " (click)="delete()">Eliminar</button>            
+        <button class="btn btn-danger ml-5" (click)="delete()">Eliminar</button>            
+      </div>
+      <div class="col-2">   
       </div>
     </div>
 </div>
