--- a/src/app/components/firebase/firebase.component.html
+++ b/src/app/components/firebase/firebase.component.html
@@ -1,7 +1,7 @@
 <div id="header"></div>
 <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item">
-      <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Nuevo Item</a>
+      <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Gestión de contenido</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Modificar Item</a>
@@ -41,12 +41,38 @@
           <div *ngIf="editableItem">
             <app-editable-item [i]="this.editableItem"></app-editable-item>
           </div>
+          <div *ngIf="newItem">
+              <form ngNativeValidate class="">
+                  <label>Sección: </label><select #newsection class="ml-2">
+                    <option value="ninstalaciones">Instalaciones</option>
+                    <option value="noticias">Noticias</option>
+                    <option value="cursos">Cursos</option>
+                  </select> <br>
+                  <label class="mt-2">Título: </label><input class="ml-2" type="text" #newtittle required> <br>
+                  
+                  <label class="mt-2">Descripción:</label><br><textarea rows="4" cols="50" type="text" #newdescription required></textarea> <br>
+                  <div class="container-fluid mt-4">
+                    <span class="nuestroinput">
+                      <label for="nuestroinput"><i class="fas fa-upload"></i><span class="nuestroinput" id="mensaje"> Requiere imagen</span></label><br>     
+                    </span>
+                    <span class="nuestroinput">
+                      <input id="nuestroinput" type="file" (change)="getFile($event)" required><br>
+                    </span>
+                    <button type="submit" (click)="addItem(newsection.value,newtittle.value,newdescription.value,newsection.value)"  class="btn btn-danger mt-1" false>Añadir artículo</button> 
+                  </div>
+                </form>
+          </div>
         </div>
         </div>
+        
+        <div class="row mt-5 justify-content-center">
+          <button class="btn btn-danger" (click)="createNewItem()">Nuevo artículo</button>
+        </div>
+       
     </div>
     <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
         <div class="row justify-content-center">            
-            <form>
+            <!-- <form>
               <label>Sección:</label><select class="ml-2" #section>
                 <option value="recursos">Recursos</option>
                 <option value="ninstalaciones">Instalaciones</option>
@@ -65,7 +91,8 @@
               <app-editable-item [i]=this.editableItem ></app-editable-item>         
             </div>
             <div class="col-3"></div>
-          </div>
+          </div> -->
+
     </div>
     <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
   </div>
