--- a/src/app/components/firebase/firebase.component.html
+++ b/src/app/components/firebase/firebase.component.html
@@ -64,7 +64,7 @@
       <div class="col-3"></div>
     </div>
   </div>
-  <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+  <div class="tab-pane fade container" id="contact" role="tabpanel" aria-labelledby="contact-tab">
 
     <form #f="ngForm" ngNativeValidate (ngSubmit)="findUser(mailFind.value)" class="mt-4 ml-3">
       <div class="form-group row">
