--- a/src/app/components/firebase/firebase.component.html
+++ b/src/app/components/firebase/firebase.component.html
@@ -38,19 +38,24 @@
       </div>
       <div class="col-md-7">
         <div *ngIf="editableItem">
-          <app-editable-item [i]="this.editableItem"></app-editable-item>
+          <app-editable-item [i]="this.editableItem" (init)="init()"></app-editable-item>
         </div>
-        <div *ngIf="newItem">
+        <div *ngIf="newItem" class="ml-3 mr-3">
           <form ngNativeValidate class="">
-            <label>Sección: </label><select #newsection class="ml-2">
-              <option value="ninstalaciones">Instalaciones</option>
-              <option value="noticias">Noticias</option>
-              <option value="cursos">Cursos</option>
-            </select> <br>
-            <label class="mt-2">Título: </label><input class="ml-2" type="text" #newtittle required> <br>
-
-            <label class="mt-2">Descripción:</label><br><textarea rows="4" cols="50" type="text" #newdescription
-              required></textarea> <br>
+            <div class="form-group">
+              <label>Sección: </label><select #newsection class="form-control">
+                <option value="ninstalaciones">Instalaciones</option>
+                <option value="noticias">Noticias</option>
+                <option value="cursos">Cursos</option>
+              </select>  
+            </div>
+            <div class="form-group">
+              <label class="mt-2">Título: </label><input class="form-control" type="text" #newtittle required>
+            </div>
+            <div class="form-group">
+              <label class="mt-2">Descripción:</label><br><textarea class="form-control" rows="4" cols="50" type="text" #newdescription
+                required></textarea>
+            </div>
             <div class="container-fluid mt-4">
               <span class="nuestroinput">
                 <label for="nuestroinput"><i class="fas fa-upload"></i><span class="nuestroinput" id="mensaje"> Requiere
@@ -69,7 +74,7 @@
     </div>
 
     <div class="row mt-5 justify-content-center">
-      <button class="btn btn-danger" (click)="createNewItem()">Nuevo artículo</button>
+      <button class="btn btn-danger" *ngIf="!newItem"  (click)="createNewItem()">Nuevo artículo</button>
     </div>
 
   </div>
