--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -43,8 +43,7 @@
     <li class="nav-item dropdown" *ngIf="logged" routerLinkActive="active">
       <a class="nav-link ml-1 dropdown-toggle texto-titulo btn" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="/assets/img/logo-login.png" width="40px"></a>
       <div class="dropdown-menu dropdown-menu-right text-right" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item texto-subtitulos btn" data-toggle="collapse">Perfil</a>
-        <a class="dropdown-item texto-subtitulos btn" data-toggle="collapse">Configuración</a>
+        <a class="dropdown-item texto-subtitulos btn" data-toggle="collapse" [routerLink]="['/perfil']">Perfil</a>
         <a *ngIf="isAdmin" class="dropdown-item texto-subtitulos btn" data-toggle="collapse" [routerLink]="['/admin']">Administrador</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item texto-subtitulos btn" (click)='logout()' data-toggle="collapse">Cerrar sesión</a>
