--- a/src/app/components/firebase/firebase.component.html
+++ b/src/app/components/firebase/firebase.component.html
@@ -53,8 +53,7 @@
               <label class="mt-2">Título: </label><input class="form-control" type="text" #newtittle required>
             </div>
             <div class="form-group">
-              <label class="mt-2">Descripción:</label><br><textarea class="form-control" rows="4" cols="50" type="text" #newdescription
-                required></textarea>
+              <label class="mt-2">Descripción:</label><br><div id="quill"  type="text" #newdescription></div>
             </div>
             <div class="container-fluid mt-4">
               <span class="nuestroinput">
@@ -416,3 +415,11 @@
     </form>
   </div>
 </div>
+
+
+<script>
+    var quill = new Quill(document.getElementById('quill'), {
+      placeholder: 'Compose an epic...',
+      theme: 'bubble'
+    });
+</script>
