--- a/src/app/components/firebase/firebase.component.html
+++ b/src/app/components/firebase/firebase.component.html
@@ -392,19 +392,19 @@
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Reader</label>
         <div class="col-sm-5">
-          <input type="checkbox" class="form-control" [(ngModel)]="data.roles.reader" name="reader">
+          <input type="checkbox" class="form-control" [(ngModel)]="data.reader" name="reader">
         </div>
       </div>
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Editor</label>
         <div class="col-sm-5">
-          <input type="checkbox" class="form-control" [(ngModel)]="data.roles.editor" name="editor">
+          <input type="checkbox" class="form-control" [(ngModel)]="data.editor" name="editor">
         </div>
       </div>
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Admin</label>
         <div class="col-sm-5">
-          <input type="checkbox" class="form-control" [(ngModel)]="data.roles.admin" name="admin">
+          <input type="checkbox" class="form-control" [(ngModel)]="data.admin" name="admin">
         </div>
       </div>
 
