--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -33,6 +33,7 @@
                     <span>Me gusta</span>
                 </button>&nbsp;
                 <!-- Fin botón Like -->
+                {{this.numLikes}}
             </div>
         </div>
     </div>
