--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -28,11 +28,11 @@
         </div>
     </div>
     <!-- Botón Like -->
-    <button id="{{this.i.id}}" class="button button-like" (click)="contador(this.i.id)">
+    <button *ngIf="logged"  [ngClass]="{'coloredLike': liked}"  id="{{this.i.id}}" class="button button-like" (click)="contador(this.i.id)">
+        {{this.numLikes}}
         <i class="fa fa-heart"></i>
         <span>Me gusta</span>
     </button>&nbsp;
     <!-- Fin botón Like -->
-    {{this.numLikes}}
-    
+
 </div>
