--- a/src/app/components/login-sign/login-sign.component.html
+++ b/src/app/components/login-sign/login-sign.component.html
@@ -37,7 +37,7 @@
               <label>
                 Apellido 2
               </label>
-              <input type="text" #registerApellido2 required autocomplete="off" />
+              <input type="text" #registerApellido2 autocomplete="off" />
             </div>
         </div>
           <div class="field-wrap">
