--- a/src/app/components/login-sign/login-sign.component.html
+++ b/src/app/components/login-sign/login-sign.component.html
@@ -313,7 +313,8 @@
           <input type="text" #registerTelefono required autocomplete="off" />
         </div>
         <div id="captcha" class="mb-3">
-            <img src="../../../assets/img/captcha.png">
+          <canvas id="captchaCanvas"></canvas> 
+          <!-- <img src="../../../assets/img/captcha.png"> -->
         </div>
         <div class="field-wrap">
             <label>
