--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -3,7 +3,7 @@
   <button class="navbar-toggler" (click)="openNav()" type="button" data-toggle="collapse">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand ml-1" href="#"><img src="/assets/img/LOGO_BLANCO.png" width="50px"></a>
+  <a class="navbar-brand ml-1" [routerLink]="['/']"><img src="/assets/img/LOGO_BLANCO.png" width="50px"></a>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
@@ -26,7 +26,7 @@
     </ul>
   </div>
   <div class="form-inline my-2 my-lg-0 d-flex">
-    <span id="bienvenido" *ngIf='logged' class="nav-link texto-titulo">{{userName}}</span>
+    <span id="bienvenido" *ngIf="logged" class="nav-link texto-titulo">{{userName}}</span>
 
     <!-- Inicio cookie notificación -->
     <li *ngIf="notificacion"  id="notificacion" class="nav-item dropleft" routerLinkActive="active">
