--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-2">
     
     <div>
-        <img src="{{i.image}}">
+        <img src="{{i.image}}" alt="{{i.description}}">
     </div>       
     
     <div class="row">
