--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -3,7 +3,7 @@
   <button class="navbar-toggler" (click)="openNav()" type="button" data-toggle="collapse">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand ml-1" [routerLink]="['/']"><img src="/assets/img/LOGO_BLANCO.png" width="50px"></a>
+  <a class="navbar-brand ml-1" [routerLink]="['/']"><img src="/assets/img/LOGO_BLANCO.png" alt="Logo de la empresa" width="50px"></a>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
@@ -27,7 +27,7 @@
   </div>
   <div class="form-inline my-2 my-lg-0 d-flex">
     <span id="bienvenido" *ngIf="logged" class="nav-link texto-titulo">{{userName}}</span>
-
+    <ul>
     <!-- Inicio cookie notificación -->
     <li *ngIf="notificacion"  id="notificacion" class="nav-item dropleft" routerLinkActive="active">
       <div id="centrar" class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -49,6 +49,7 @@
         <a class="dropdown-item texto-subtitulos btn" (click)='logout()' data-toggle="collapse">Cerrar sesión</a>
       </div>
     </li>
+  </ul>
   </div>
 </nav>
 <!--Fin navBar-->
@@ -60,7 +61,7 @@
   
     <!-- Overlay content -->
     <div class="overlay-content">
-        
+      <ul>
       <li>
         <a (click)="closeNav()" data-toggle="collapse" [routerLink]="['/']">Inicio <span class="sr-only">(current)</span></a>
       </li>
@@ -82,7 +83,9 @@
       </li>
       <li >
         <a class="nav-link" (click)="closeNav()" data-toggle="collapse" [routerLink]="['/contacto']">Contacto</a>
-      </li>     
+      </li> 
+    </ul>
+
     </div>
   
   </div>
