--- a/src/app/components/item-list/item-list.component.html
+++ b/src/app/components/item-list/item-list.component.html
@@ -6,5 +6,5 @@
   </div>
 </div>
 <div id="carga" class="container d-flex justify-content-center align-items-center">
-  <img src="../../../assets/img/loading.gif">
+  <img src="../../../assets/img/loading.gif" alt="Cargando...">
 </div>
