--- a/src/app/components/recursos/recursos-item/recursos-item.component.html
+++ b/src/app/components/recursos/recursos-item/recursos-item.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div [ngClass]="{'col-xl-6': !seeMore,'col-xl-12': seeMore, 'col-12': true}">
-            <img src="{{imagen}}">
+            <img src="{{imagen}}" alt="{{description}}">
             
         </div>       
        <div [ngClass]="{'col-xl-6': !seeMore,'col-xl-12': seeMore, 'col-12': true}">
