--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -10,27 +10,31 @@
     <div class="col-md-6" >
       <br>
       <h2 class="text-uppercase font-weight-bold">CONTACTO</h2>
-      <form action="" ngNativeValidate>
+      <form action="" ngNativeValidate class="mt-3">
         <div class="row">
           <div class="col-md-6">
             <!-- Formulario de contacto (Si se deja algún campo en blanco salta un aviso para quue se rellene) -->
             <div class="form-group"> 
-              <input type="text" class="form-control mt-2" placeholder="Nombre" required>
+              <label>Nombre</label>
+              <input type="text" name="nombre" class="form-control mt-2" placeholder="Nombre" required>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <input type="email" class="form-control mt-2" placeholder="Email" required>
+              <label>Email</label>
+              <input type="email" name="email" class="form-control mt-2" placeholder="Email" required>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <input type="telefono" class="form-control mt-2" placeholder="Teléfono" required>
+              <label>Teléfono</label>
+              <input type="number" name="telefono" class="form-control mt-2" placeholder="Teléfono" required>
             </div>
           </div>
           <div class="col-12">
             <div class="form-group">
-              <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Escriba su mensaje" rows="5" cols="30" required></textarea>
+              <label>Mensaje</label>
+              <textarea class="form-control" name="mensaje" id="exampleFormControlTextarea1" placeholder="Escriba su mensaje" rows="5" cols="30" required></textarea>
             </div>
           </div>
           <div class="col-12">
@@ -38,7 +42,7 @@
           </div>
           </div>
           <div class="col-12">
-            <button class="btn btn-danger" type="submit">Enviar</button><br><br>
+            <button class="btn btn-danger" name="enviar" type="submit">Enviar</button><br><br>
           </div>
         </div>
       </form>
