Cambio contraste like

--- a/src/app/components/list-item/list-item.component.scss
+++ b/src/app/components/list-item/list-item.component.scss
@@ -12,7 +12,7 @@ img {
   text-align: center;
   display: inline-block;
   border: none;
-  color: darkgray;
+  color: $fondo_footer;
   bottom: 5px;
   right: 5px;
 
