--- a/src/app/components/list-item/list-item.component.scss
+++ b/src/app/components/list-item/list-item.component.scss
@@ -5,6 +5,11 @@ img {
   height: 239px;
 }
 
+button:focus {
+  background-color: black !important; 
+  color: white !important;   
+}
+
 .button-like {
   background-color: transparent;
   cursor: pointer;
