--- a/src/app/components/login-sign/login-sign.component.scss
+++ b/src/app/components/login-sign/login-sign.component.scss
@@ -30,6 +30,16 @@ $br: 4px;
   }
 }
 
+a:focus {
+  background-color: black !important; 
+  color: white !important;   
+}
+button:focus {
+  background-color: black !important; 
+  color: white !important;   
+}
+
+
 
 *, *:before, *:after {
   box-sizing: border-box;
