--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -15,9 +15,11 @@
           Servicios
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/noticias']">Noticias</a>
-          <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/cursos']">Cursos</a>
-          <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/nuestras_instalaciones']">Nuestras Instalaciones</a>
+          <ul class="p-0">
+          <li><a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/noticias']">Noticias</a></li>
+          <li><a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/cursos']">Cursos</a></li>
+          <li><a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/nuestras_instalaciones']">Nuestras Instalaciones</a></li>
+        </ul>
         </div>
       </li>
       <li class="nav-item" routerLinkActive="active">
